# zserio-cpp17-error

./: .gitmodules  CMakeLists.txt  test.zs
